# chest-xray-onnx-validation-pipeline

./: .gitignore  CMakeLists.txt  Makefile.win  README.md  requirements.cpu.txt  setup.sh
config/: model_config.json
include/db/: database.h
include/engine/: image_loader.h  model_output_validation.h  model_runner.h  preprocessor.h  preprocessor_validation.h  rule_engine.h  xray_engine.h  xray_runtime_paths.h  xray_types.h
include/export/: result_formatter.h
include/ui/: main_window.h
include/utils/: xray_logger.h
models/: model_metadata.json
package/: installer.iss
rules/: thresholds.json
scripts/: baseline_inference_validation.py  download_model.py  export_model_to_onnx.py  run_validation_image_inference.py  validate_environment.py  validate_onnx_numerical_equivalence.py
src/cli/: main.c
src/db/: database.c
src/engine/: image_loader.c  model_output_validation.c  model_runner.c  preprocessor.c  preprocessor_validation.c  rule_engine.c  xray_engine.c
src/export/: result_formatter.c
src/gui/: main_gui.c
src/ui/: main_window.c
src/utils/: xray_logger.c  xray_status.c
tests/: test_rule_engine_invalid_probability.c
validation_dataset/metadata/: dataset_manifest.json  image_registry.json
